# rebotica

./: .gitignore  .mcp.json  Cargo.toml  LICENSE  Makefile  README.md  justfile
claude/commands/: local-explain.md  local-model-health.md  local-model-retrospective.md  local-patch.md  local-retro.md  local-review.md  local-tests.md  local-worker-health.md  local-worker-retrospective.md
codex/: README.md
crates/atelier-cli/: Cargo.toml
crates/atelier-cli/src/: main.rs
crates/atelier-core/: Cargo.toml
crates/atelier-core/src/: lib.rs
crates/atelier-git/: Cargo.toml
crates/atelier-guard/: Cargo.toml
crates/atelier-guard/src/: lib.rs
crates/atelier-mcp/: Cargo.toml
crates/atelier-mcp/src/: main.rs
crates/atelier-provider/: Cargo.toml
crates/atelier-provider/src/: lib.rs
crates/atelier-runlog/: Cargo.toml
crates/atelier-runlog/src/: lib.rs
crates/rebotica-cli/: Cargo.toml
crates/rebotica-cli/src/: main.rs
crates/rebotica-cli/tests/: cli.rs
crates/rebotica-core/: Cargo.toml
crates/rebotica-core/src/: lib.rs  run.rs
crates/rebotica-core/src/output/: envelope.rs  mod.rs  reporter.rs
crates/rebotica-core/tests/: builtin_prompts_match_schemas.rs
crates/rebotica-git/: Cargo.toml
crates/rebotica-git/src/: lib.rs
crates/rebotica-guard/: Cargo.toml
crates/rebotica-guard/src/: lib.rs
crates/rebotica-mcp/: Cargo.toml
crates/rebotica-mcp/src/: lib.rs  main.rs
crates/rebotica-provider/: Cargo.toml
crates/rebotica-provider/src/: lib.rs
crates/rebotica-run/: Cargo.toml
crates/rebotica-run/src/: lib.rs
crates/rebotica-runlog/: Cargo.toml
crates/rebotica-runlog/src/: feedback.rs  ledger.rs  lib.rs  tests_support.rs
docs/: architecture.md  exit-codes.md  governance.md  install.md  measurement.md  operating-model.md  output-contract.md  philosophy.md  providers.md  release.md  roadmap.md  run-plugins.md  safety-model.md  self-healing.md  skills.md  usage.md
github/: pull_request_template.md
github/ISSUE_TEMPLATE/: comment-card.yml
github/workflows/: atelier-verify.yml  rebotica-verify.yml
mcp/local-model-server/: README.md
mcp/rebotica-server/: README.md
packaging/homebrew/: README.md  rebotica.rb.template
prompts/contracts/: patch-only.md  review-only.md  task-envelope.md
prompts/runs.d/_common/: runs-common.schema.json
prompts/runs.d/explain/: manifest.yml  prompt.md  schema.json
prompts/runs.d/patch/: manifest.yml  prompt.md  schema.json
prompts/runs.d/review/: manifest.yml  prompt.md  schema.json
prompts/runs.d/tests/: manifest.yml  prompt.md  schema.json
prompts/system/: delegated-run.md  local-docs-sync.md  local-reviewer.md  local-test-writer.md  local-worker.md
scripts/: README.md  diff-guard.sh  git-context.sh  install.sh  local-install-smoke.sh  mcp-eval.sh  patch-guard.sh  provider-chat.sh
skills/delegated-run-self-healing/: SKILL.md
skills/local-model-delegation/: SKILL.md  claude-settings-snippet.json
skills/local-model-delegation/hooks/: claude-settings-snippet.json  post-tool-use.sh
skills/local-worker-self-healing/: SKILL.md
templates/: project.atelier.yml  project.rebotica.yml  scorecard.yml  task-envelope.yml
