[workspace]
members = [
  "crates/atelier-cli",
  "crates/atelier-core",
  "crates/atelier-git",
  "crates/atelier-guard",
  "crates/atelier-mcp",
  "crates/atelier-provider",
  "crates/atelier-runlog"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/catalandres/atelier"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.18", features = ["v4"] }

atelier-core = { path = "crates/atelier-core" }
atelier-git = { path = "crates/atelier-git" }
atelier-guard = { path = "crates/atelier-guard" }
atelier-provider = { path = "crates/atelier-provider" }
atelier-runlog = { path = "crates/atelier-runlog" }
