[workspace]
members = [
  "crates/rebotica-cli",
  "crates/rebotica-core",
  "crates/rebotica-git",
  "crates/rebotica-guard",
  "crates/rebotica-mcp",
  "crates/rebotica-provider",
  "crates/rebotica-runlog"
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/catalandres/rebotica"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal"] }
uuid = { version = "1.18", features = ["v4"] }
jsonschema = { version = "0.46.5", default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }

rebotica-core = { path = "crates/rebotica-core" }
rebotica-git = { path = "crates/rebotica-git" }
rebotica-guard = { path = "crates/rebotica-guard" }
rebotica-provider = { path = "crates/rebotica-provider" }
rebotica-runlog = { path = "crates/rebotica-runlog" }
