[package]
name = "atelier-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "atelier"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
atelier-core.workspace = true
atelier-git.workspace = true
atelier-guard.workspace = true
atelier-provider.workspace = true
atelier-runlog.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
