[package]
name = "rebotica-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rbtc"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
rebotica-core.workspace = true
rebotica-git.workspace = true
rebotica-guard.workspace = true
rebotica-provider.workspace = true
rebotica-runlog.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
