[package]
name = "rebotica-run"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
rebotica-core.workspace = true
rebotica-git.workspace = true
rebotica-guard.workspace = true
rebotica-provider.workspace = true
rebotica-runlog.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
